[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "osbparser"
authors = [
    {name = "jkjkil4"}
]
readme = "README.md"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python"
]
requires-python = ">=3.10"

[project.urls]
Source = "https://github.com/jkjkil4/osbparser"
